docs(api-model): plainer language for the arrow-vector decision
The reasoning in ArrowIpc read like a dependency audit. Same facts, fewer
clauses, and the JVM flags are described rather than listed. The four
classes that handle Arrow frames now point at it with @see instead of
each carrying their own version of the story; the constants and the
varint reader do not, because they exist for the wire format rather than
for that decision.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Signed-off-by: Olav Gjerde <olav@intellistream.ai>